--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>VB Backup HEN</title>
-        <meta name="", content="">
-        <meta name="", content="">
-        <meta name="", content="">
+        <meta name="description", content="Github Repo for Playstation 3 Homebrew">
+        <meta name="keywords", content="PS3,Homebrew,HEN,PS3Exploit">
+        <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <style> body {width: 800px; max-width: 100%;}</style>
     </head>
     <body>
