Updated Web Files
Added Credits from original fork along with links to PS3Addict's Github & Guide Posts.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <center><p>Be sure to visit <a href="http://www.ps3exploit.me">PS3Exploit.me</a>
             <a> for the offical PS3HEN & BGToolset.</a></p>
             <a><p></p></a>
+            <p>Website base has been forked by ps3addict, Go check out his github and PSX-Place Profile for updates on things hen related.
+                <a href="https://github.com/ps3addict/">PS3Addict Github</a><br>
+                <a href="https://ps3addict.github.io/guides.html">PS3Addict Guides</a>
+            </p>
+            <a><p></p></a>
             <a>
                 <p>The webpages below are meant to be used with the PS3 web browser (except for HELP pages).</p>
             </a>
