--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <a> for the offical PS3HEN & BGToolset.</a></p>
             <a><p></p></a>
             <p>Website base has been forked by ps3addict, Go check out his github and PSX-Place Profile for updates on things hen related.
-                <a href="https://github.com/ps3addict/">PS3Addict Github</a><br>
-                <a href="https://ps3addict.github.io/guides.html">PS3Addict Guides</a>
+                <a href="https://github.com/ps3addict/">PS3Addict Github</a>
+                <a href="https://ps3addict.github.io/guides.html"> PS3Addict Guides</a>
             </p>
             <a><p></p></a>
             <a>
