--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>VB Backup HEN</title>
         <meta name="description", content="Github Repo for Playstation 3 Homebrew">
-        <meta name="keywords", content="PS3,Homebrew,HEN,PS3Exploit">
+        <meta name="keywords", content="PS3,Homebrew,HEN,PS3Xploit">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <style> body {width: 800px; max-width: 100%;}</style>
     </head>
     <body>
-        <center><p>Be sure to visit <a href="http://www.ps3exploit.me">PS3Exploit.me</a>
+        <center><p>Be sure to visit <a href="http://www.ps3xploit.me">PS3Xploit.me</a>
             <a> for the offical PS3HEN & BGToolset.</a></p>
             <a><p></p></a>
             <p>Website base has been forked by ps3addict, Go check out his github and PSX-Place Profile for updates on things hen related.
