--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>VB Backup HEN</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico"
         <meta name="description", content="Github Repo for Playstation 3 Homebrew">
         <meta name="keywords", content="PS3,Homebrew,HEN,PS3Xploit">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
