--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <center><p>Be sure to visit <a href="http://www.ps3xploit.me">PS3Xploit.me</a>
             <a> for the offical PS3HEN & BGToolset.</a></p>
             <a><p></p></a>
-            <p>Website base has been forked by ps3addict, Go check out his github and PSX-Place Profile for updates on things hen related.
+            <p>Website base has been forked from ps3addict, Go check out his github and PSX-Place Profile for updates on things hen related.
                 <a href="https://github.com/ps3addict/">PS3Addict Github</a>
                 <a href="https://ps3addict.github.io/guides.html"> PS3Addict Guides</a>
             </p>
