--- a/PS3/enablehen/index.html
+++ b/PS3/enablehen/index.html
@@ -10,13 +10,13 @@
 <h1>Online PS3HEN Enablers:</h1>
 <p>Works on HFW 4.84 to 4.89.<p>
 <p>Offical Flash</p>
-<p><a href="https://voidsandbox.github.io/enablehen/flash.html">https://voidsandbox.github.io/enablehen/flash.html</a></p>
+<p><a href="https://voidsandbox.github.io/PS3/enablehen/flash.html">https://voidsandbox.github.io/PS3/enablehen/flash.html</a></p>
 <p>Offical USB Port (Slot closest to BDVD drive)</p>
-<p><a href="https://voidsandbox.github.io/enablehen/usb000.html">https://voidsandbox.github.io/enablehen/usb000.html</a></p>
+<p><a href="https://voidsandbox.github.io/PS3/enablehen/usb000.html">https://voidsandbox.github.io/PS3/enablehen/usb000.html</a></p>
 <p>Alt. 1 USB Port (Left Hand)</p>
-<p><a href="https://voidsandbox.github.io/enablehen/usb001.html">https://voidsandbox.github.io/enablehen/usb001.html</a></p>
+<p><a href="https://voidsandbox.github.io/PS3/enablehen/usb001.html">https://voidsandbox.github.io/PS3/enablehen/usb001.html</a></p>
 <p>Alt. 2 USB Port (Left Hand)</p>
-<p><a href="https://voidsandbox.github.io/enablehen/usb006.html">https://voidsandbox.github.io/enablehen/usb006.html</a></p>
+<p><a href="https://voidsandbox.github.io/PS3/enablehen/usb006.html">https://voidsandbox.github.io/PS3/enablehen/usb006.html</a></p>
 <p>-------</p>
 <p>Others htmls are UNTESTED and should NOT be used!</p>
 </body>
