--- a/PS3/hen_installer/index.html
+++ b/PS3/hen_installer/index.html
@@ -7,7 +7,7 @@
 <script>
 function downloadhen()
 {
-	window.location.href = 'https://voidsandbox.github.io/hen_installer/' + fwVersion + '/PS3HEN.p3t';
+	window.location.href = 'https://voidsandbox.github.io/PS3/hen_installer/' + fwVersion + '/PS3HEN.p3t';
 }
 
 function initROP(init)
