--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <a>
                 <p>The webpages below are meant to be used with the PS3 web browser (except for HELP pages).</p>
             </a>
-            <a href="https://voidsandbox.github.io/autohen">Auto HEN Installer</a>
+            <a href="https://voidsandbox.github.io/PS3/autohen">Auto HEN Installer</a>
             <a>
                 <b>(HEN 3.0.3 on HFW 4.84 to 4.88)</b>
                 <p></p>
                 <p></p>
             </a>
             <p>
-                <a href="https://voidsandbox.github.io/enablehen/index.html">HEN Enabler</a>
+                <a href="https://voidsandbox.github.io/PS3/enablehen/index.html">HEN Enabler</a>
                 <b>(HFW 4.84 to 4.89)</b>
             </p>
             <p>
-                <a href="https://voidsandbox.github.io/btga/">BT/USB Game Audio Mod</a>
+                <a href="https://voidsandbox.github.io/PS3/btga/">BT/USB Game Audio Mod</a>
                 <b>(Official HEN 3.0.3 on HFW 4.88 Required)</b>
             </p>
         </center>
